examples/test/testpolicy1402.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1402
  namespace: namespace448
spec:
  podSelector:
    matchLabels:
      key24: value28
      key4: value42
      key5: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value9
      podSelector:
        matchLabels:
          key24: value7
          key28: value11
          key35: value48
